chore: fix feature boxes on mobile

--- a/assets/sass/custom/_features-grid.scss
+++ b/assets/sass/custom/_features-grid.scss
@@ -1,13 +1,22 @@
 .features-grid {
+  width: auto;
+  margin: 0;
+
   .feature {
     @include vendor('justify-content','start');
+    @include vendor('flex-wrap', 'nowrap');
     padding: _size(element-margin) * 1.5 _size(element-margin) * 2;
+    min-height: 100%;
+    padding: 2rem 2rem;
   }
 
   &.special {
     margin-top: calc(-13rem - 1px);
     box-shadow: none;
     background: none;
+    margin-top: calc(-13rem - 1px);
+    margin-left: calc(2rem - 10px);
+    margin-right: calc(2rem - 10px);
     
     .feature {
       background: white;
@@ -15,8 +24,8 @@
     }
   }
   .feature-wrapper {
-    margin: 10px;
-    width: 100%; 
+    margin: 10px; 
+    width: calc(33% - 20px);
     box-shadow: 0px 25px 75px 0px rgba(0, 0, 0, 0.1);
   }
   
@@ -35,7 +44,13 @@
   @include breakpoint('<=medium') {
     .feature {
       @include vendor('justify-content','center');
-      padding: 0 _size(element-margin) * 2;
+      padding: 2rem;
+    }
+  }
+
+  @include breakpoint("<=small") {
+    .feature-wrapper {
+      width: 100%;
     }
   }
 }
